src/main/java/mx/zurich/demo/rating/engine/RatingEngineParser.java
// Generated from RatingEngine.g4 by ANTLR 4.9.3
package mx.zurich.demo.rating.engine;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RatingEngineParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, If=4, Then=5, Else=6, Return=7, End=8, Or=9, And=10, 
		Max=11, Min=12, Rnd=13, Ceil=14, Floor=15, Exp=16, Year=17, Month=18, 
		Day=19, Substr=20, Error=21, Mod=22, AddDays=23, GetDiffDays=24, PaddedString=25, 
		DifferenceInMonths=26, A=27, B=28, C=29, D=30, E=31, F=32, G=33, H=34, 
		I=35, L=36, M=37, N=38, O=39, P=40, R=41, S=42, T=43, U=44, X=45, Y=46, 
		Equals=47, NEquals=48, GTEquals=49, LTEquals=50, Pow=51, Excl=52, GT=53, 
		LT=54, Add=55, Subtract=56, Multiply=57, Divide=58, Modulus=59, Bool=60, 
		Number=61, Identifier=62, String=63, Space=64, Line_Comment=65, Comment=66, 
		ErrorCharacter=67;
	public static final int
		RULE_parse = 0, RULE_block = 1, RULE_errorFunctionCall = 2, RULE_functionCall = 3, 
		RULE_ifStatement = 4, RULE_ifStat = 5, RULE_elseIfStat = 6, RULE_elseStat = 7, 
		RULE_exprList = 8, RULE_expression = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "block", "errorFunctionCall", "functionCall", "ifStatement", 
			"ifStat", "elseIfStat", "elseStat", "exprList", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "','", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'='", "'<>'", "'>='", "'<='", "'^'", "'!'", "'>'", "'<'", "'+'", "'-'", 
			"'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "If", "Then", "Else", "Return", "End", "Or", 
			"And", "Max", "Min", "Rnd", "Ceil", "Floor", "Exp", "Year", "Month", 
			"Day", "Substr", "Error", "Mod", "AddDays", "GetDiffDays", "PaddedString", 
			"DifferenceInMonths", "A", "B", "C", "D", "E", "F", "G", "H", "I", "L", 
			"M", "N", "O", "P", "R", "S", "T", "U", "X", "Y", "Equals", "NEquals", 
			"GTEquals", "LTEquals", "Pow", "Excl", "GT", "LT", "Add", "Subtract", 
			"Multiply", "Divide", "Modulus", "Bool", "Number", "Identifier", "String", 
			"Space", "Line_Comment", "Comment", "ErrorCharacter"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RatingEngine.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RatingEngineParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(RatingEngineParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			block();
			setState(21);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public TerminalNode Return() { return getToken(RatingEngineParser.Return, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ErrorFunctionCallContext errorFunctionCall() {
			return getRuleContext(ErrorFunctionCallContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			setState(27);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case If:
				enterOuterAlt(_localctx, 1);
				{
				setState(23);
				ifStatement();
				}
				break;
			case Return:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(24);
				match(Return);
				setState(25);
				expression(0);
				}
				}
				break;
			case Error:
				enterOuterAlt(_localctx, 3);
				{
				setState(26);
				errorFunctionCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorFunctionCallContext extends ParserRuleContext {
		public TerminalNode Error() { return getToken(RatingEngineParser.Error, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ErrorFunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_errorFunctionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterErrorFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitErrorFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitErrorFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ErrorFunctionCallContext errorFunctionCall() throws RecognitionException {
		ErrorFunctionCallContext _localctx = new ErrorFunctionCallContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_errorFunctionCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(Error);
			setState(30);
			match(T__0);
			setState(31);
			expression(0);
			setState(32);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
	 
		public FunctionCallContext() { }
		public void copyFrom(FunctionCallContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DifferenceInMonthsFunctionCallContext extends FunctionCallContext {
		public TerminalNode DifferenceInMonths() { return getToken(RatingEngineParser.DifferenceInMonths, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public DifferenceInMonthsFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterDifferenceInMonthsFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitDifferenceInMonthsFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitDifferenceInMonthsFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class YearFunctionCallContext extends FunctionCallContext {
		public TerminalNode Year() { return getToken(RatingEngineParser.Year, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public YearFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterYearFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitYearFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitYearFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DayFunctionCallContext extends FunctionCallContext {
		public TerminalNode Day() { return getToken(RatingEngineParser.Day, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DayFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterDayFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitDayFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitDayFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FloorFunctionCallContext extends FunctionCallContext {
		public TerminalNode Floor() { return getToken(RatingEngineParser.Floor, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FloorFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterFloorFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitFloorFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitFloorFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddDaysFunctionCallContext extends FunctionCallContext {
		public TerminalNode AddDays() { return getToken(RatingEngineParser.AddDays, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public AddDaysFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterAddDaysFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitAddDaysFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitAddDaysFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdentifierFunctionCallContext extends FunctionCallContext {
		public TerminalNode Identifier() { return getToken(RatingEngineParser.Identifier, 0); }
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public IdentifierFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterIdentifierFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitIdentifierFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitIdentifierFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PaddedStringFunctionCallContext extends FunctionCallContext {
		public TerminalNode PaddedString() { return getToken(RatingEngineParser.PaddedString, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public PaddedStringFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterPaddedStringFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitPaddedStringFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitPaddedStringFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExpFunctionCallContext extends FunctionCallContext {
		public TerminalNode Exp() { return getToken(RatingEngineParser.Exp, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterExpFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitExpFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitExpFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MinFunctionCallContext extends FunctionCallContext {
		public TerminalNode Min() { return getToken(RatingEngineParser.Min, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public MinFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterMinFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitMinFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitMinFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MaxFunctionCallContext extends FunctionCallContext {
		public TerminalNode Max() { return getToken(RatingEngineParser.Max, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public MaxFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterMaxFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitMaxFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitMaxFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RoundFunctionCallContext extends FunctionCallContext {
		public TerminalNode Rnd() { return getToken(RatingEngineParser.Rnd, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public RoundFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterRoundFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitRoundFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitRoundFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MonthFunctionCallContext extends FunctionCallContext {
		public TerminalNode Month() { return getToken(RatingEngineParser.Month, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public MonthFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterMonthFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitMonthFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitMonthFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GetDiffDaysFunctionCallContext extends FunctionCallContext {
		public TerminalNode GetDiffDays() { return getToken(RatingEngineParser.GetDiffDays, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public GetDiffDaysFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterGetDiffDaysFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitGetDiffDaysFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitGetDiffDaysFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CeilFunctionCallContext extends FunctionCallContext {
		public TerminalNode Ceil() { return getToken(RatingEngineParser.Ceil, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CeilFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterCeilFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitCeilFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitCeilFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SubstrFunctionCallContext extends FunctionCallContext {
		public TerminalNode Substr() { return getToken(RatingEngineParser.Substr, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public SubstrFunctionCallContext(FunctionCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).enterSubstrFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RatingEngineListener ) ((RatingEngineListener)listener).exitSubstrFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RatingEngineVisitor ) return ((RatingEngineVisitor<? extends T>)visitor).visitSubstrFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
